<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_dns">
        <EditTextPreference
            android:key="upstream_dns"
            android:title="@string/pref_upstream_dns"
            android:summary="@string/pref_upstream_dns_summary"
            android:defaultValue="1.1.1.1" />
        <EditTextPreference
            android:key="upstream_dns2"
            android:title="@string/pref_upstream_dns2"
            android:summary="@string/pref_upstream_dns2_summary"
            android:defaultValue="8.8.8.8" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_blocklist">
        <Preference
            android:key="blocklist_url"
            android:title="@string/pref_blocklist" />
        <SwitchPreferenceCompat
            android:key="auto_refresh"
            android:title="@string/pref_auto_refresh"
            android:summary="@string/pref_auto_refresh_summary"
            android:defaultValue="true" />
        <Preference
            android:key="custom_blocked"
            android:title="@string/pref_custom_blocked" />
        <Preference
            android:key="custom_allowed"
            android:title="@string/pref_custom_allowed" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_diagnostics">
        <Preference
            android:key="open_recently_blocked"
            android:title="@string/recently_blocked"
            android:summary="@string/pref_recently_blocked_summary" />
        <SwitchPreferenceCompat
            android:key="debug_notifications"
            android:title="@string/debug_notify_title"
            android:summary="@string/debug_notify_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_startup">
        <SwitchPreferenceCompat
            android:key="auto_start"
            android:title="@string/pref_auto_start"
            android:summary="@string/pref_auto_start_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_updates">
        <SwitchPreferenceCompat
            android:key="auto_update"
            android:title="@string/pref_auto_update"
            android:summary="@string/pref_auto_update_summary"
            android:defaultValue="true" />
        <Preference
            android:key="check_updates_now"
            android:title="@string/pref_check_updates" />
    </PreferenceCategory>

</PreferenceScreen>
